--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
   },
   "homepage": "https://github.com/thokozani445/Backend_Nodejs_Grd12#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "sign": "^1.0.2",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.1",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
