--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
+// tsconfig.json
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "strict": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "types": ["node"],
     "esModuleInterop": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "strict": true,
+    "outDir": "dist"
+  },
+  "include": ["src"]
 }
