file structure updated

--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
   },
   "homepage": "https://github.com/thokozani445/Backend_Nodejs_Grd12#readme",
   "dependencies": {
+    "@prisma/client": "^6.16.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.5.1",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.5.2",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
+    "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
